Added Scroll Up Animation Auto Annotation Template

--- a/auto-annotation-scroll-up-anim/style.css
+++ b/auto-annotation-scroll-up-anim/style.css
@@ -6,7 +6,7 @@ body {
   justify-content: center;
   height: 100vh;
   /* grey */
-  background-color: #fff;
+  background-color: transparent;
 }
 
 p {
