--- a/collection-add-intersect/style.css
+++ b/collection-add-intersect/style.css
@@ -9,7 +9,7 @@
   left: 50%;
   margin-left: -65px;
   margin-top: -20px;
-  width: 130px;
+  width: 230px;
   height: 40px;
   text-align: center;
 }
@@ -18,7 +18,7 @@ button {
   outline: none;
   height: 40px;
   text-align: center;
-  width: 130px;
+  width: 230px;
   border-radius: 40px;
   background: #fff;
   border: 2px solid #444857;
@@ -37,12 +37,14 @@ button:hover {
 button:active {
   letter-spacing: 2px;
 }
-button:after {
-  
+#button1:after {
+  content: "POOL FUSION";
 }
-
+#button2:after {
+  content: "POOL INTERSECTION";
+}
 .onclic {
-  width: 40px;
+  width: 50px;
   border-color: #bbbbbb;
   border-width: 3px;
   font-size: 0;
