Pool fusion and intersection

--- a/collection-add-intersect/style.css
+++ b/collection-add-intersect/style.css
@@ -37,6 +37,9 @@ button:hover {
 button:active {
   letter-spacing: 2px;
 }
+button::after{
+  content: "SUCCESS";
+}
 #button1:after {
   content: "POOL FUSION";
 }
