Pool fusion and intersection

--- a/collection-add-intersect/style.css
+++ b/collection-add-intersect/style.css
@@ -70,7 +70,7 @@ button::after{
 }
 .validate:after {
   font-family: "FontAwesome";
-  content: "";
+  content: "\f00c";
 }
 
 @-webkit-keyframes rotating {
